[gd_scene load_steps=11 format=2]

[ext_resource path="res://scenes/settings.gd" type="Script" id=1]
[ext_resource path="res://theme-default.tres" type="Theme" id=2]
[ext_resource path="res://art-built/9patch/background-title.png" type="Texture2D" id=3]
[ext_resource path="res://scripts/background.gd" type="Script" id=4]
[ext_resource path="res://fonts/Amaranth-Regular-60.tres" type="FontFile" id=5]
[ext_resource path="res://art-built/button-back-small.png" type="Texture2D" id=6]
[ext_resource path="res://art-built/button-credits.png" type="Texture2D" id=7]
[ext_resource path="res://art-built/button-reset-account.png" type="Texture2D" id=8]
[ext_resource path="res://art-built/button-change-name.png" type="Texture2D" id=9]
[ext_resource path="res://fonts/Amaranth-Regular-24.tres" type="FontFile" id=10]

[node name="root" type="Node"]
script = ExtResource( 1 )

[node name="ui" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )

[node name="bg" type="Sprite2D" parent="ui"]
texture = ExtResource( 3 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 540, 960 )
script = ExtResource( 4 )

[node name="title_label" type="Label" parent="ui"]
anchor_right = 1.0
offset_top = 50.0
offset_bottom = 124.0
theme_override_fonts/font = ExtResource( 5 )
text = "Settings"
align = 1

[node name="back_button" type="TextureButton" parent="ui"]
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -30.0
offset_top = -100.0
offset_right = 151.0
offset_bottom = -12.0
texture_normal = ExtResource( 6 )
expand = true
stretch_mode = 5

[node name="credits_button" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -196.0
offset_top = -256.0
offset_right = 196.0
offset_bottom = -182.0
texture_normal = ExtResource( 7 )
expand = true
stretch_mode = 5

[node name="reset_account_button" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -104.0
offset_right = 196.0
offset_bottom = -30.0
texture_normal = ExtResource( 8 )
expand = true
stretch_mode = 5

[node name="change_name_button" type="TextureButton" parent="ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -196.0
offset_top = -14.0
offset_right = 196.0
offset_bottom = 60.0
texture_normal = ExtResource( 9 )
expand = true
stretch_mode = 5

[node name="checkbox_music" type="CheckBox" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -195.725
offset_top = -346.723
offset_right = -30.725
offset_bottom = -262.723
text = "Music"

[node name="checkbox_sound" type="CheckBox" parent="ui"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 31.0022
offset_top = -346.321
offset_right = 196.002
offset_bottom = -262.321
text = "Sound"

[node name="online_status" type="Label" parent="ui"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -157.0
offset_right = 190.0
offset_bottom = -112.0
theme_override_fonts/font = ExtResource( 10 )
text = "Offline."

